--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-hook-form": "^7.60.0",
     "react-loading-indicators": "^1.0.1",
     "sonner": "^2.0.6",
+    "sooner": "^1.1.4",
     "tailwind-merge": "^3.3.1",
     "zod": "^4.0.5"
   },
